...
                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="20"/>
                                                <color key="textColor" red="0.27450980390000002" green="0.3803921569" blue="0.1450980392" alpha="1" colorSpace="calibratedRGB"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMask
                                                <rect key="frame" x="148" y="322" width="24" height="24"/>
                                                <state key="normal" backgroundImage="add"/>
                                                <connections>
                                                    <action selector="AddToGroceryListButonTapped:" destination="dOq-uW-hRa" eventType="touchUpInside" id="ta6-yN-63e"/>
                                                </connections>
                                            </button>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Instructions" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KCn-ix-772">
                                                <rect key="frame" x="109.5" y="354" width="102" height="21"/>
...
                                                <connections>
                                                    <action selector="cookedButtonPressed:" destination="dOq-uW-hRa" eventType="touchUpInside" id="bSv-QX-FcX"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="in3-zf-Ry8">
                                                <rect key="frame" x="264" y="322" width="24" height="24"/>
                                                <state key="normal" backgroundImage="star"/>
                                                <state key="selected" backgroundImage="star copy"/>
                                                <state key="highlighted" backgroundImage="star copy"/>
                                                <connections>
                                                    <action selector="favoritesButtonPressed:" destination="dOq-uW-hRa" eventType="touchUpInside" id="1qk-Hi-AkD"/>
                                                </connections>
                                            </button>
...
            <point key="canvasLocation" x="840" y="-78"/>
        </scene>
        <!--Explore-->
        <scene sceneID="rOc-p1-Bf1">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" hidesBarsOnSwipe="YES" id="nUo-Ah-cTT" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Explore" image="Explore Icon" id="Lhe-Fn-1iS"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="J3w-nL-bKb">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <textAttributes key="titleTextAttributes">
                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
...
            <point key="canvasLocation" x="6780" y="-492.25352112676057"/>
        </scene>
        <!--List-->
        <scene sceneID="hhJ-0P-181">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="H3a-dX-K3y" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="List" image="List" id="GS2-Ve-55N"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="RST-Sh-u5l">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <textAttributes key="titleTextAttributes">
                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
...
            <point key="canvasLocation" x="2034.375" y="-1129.2253521126761"/>
        </scene>
        <!--You Liked-->
        <scene sceneID="mlR-7Q-2YX">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dUD-0J-0z6" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="You Liked" image="star" id="8mf-ct-nXS"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="2uO-bV-yQw">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <textAttributes key="titleTextAttributes">
                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
...
